--- a/HolaMundo/JenkinsFile
+++ b/HolaMundo/JenkinsFile
@@ -11,9 +11,10 @@ pipeline {
         }
         stage ('Deploy for testing') {
             steps {
-                bat'''
+			dir("HolaMundo"){
+                bat'''																																									
                 mvn pre-integration-test -DoracleServerUrl=\"http://localhost:7101\" -DoracleUsername=\"weblogic\" -DoraclePassword=\"weblogic\" -DoracleHome=\"C:\\Oracle\\Middleware\\Oracle_Home\"
-                '''
+                '''}
                 }
         }
     }
